--- a/src/EventPi.Services.Camera.Contract/EventPi.Services.Camera.Contract.csproj
+++ b/src/EventPi.Services.Camera.Contract/EventPi.Services.Camera.Contract.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="MicroPlumberd" Version="1.0.124.158" />
     <PackageReference Include="ModelingEvolution.Drawing" Version="*" />
+    <PackageReference Include="ModelingEvolution.JsonParsableConverter" Version="1.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EventPi.Abstractions\EventPi.Abstractions.csproj" />
